# stm32f407-reg-dev

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.c
cmake/: arm-none-eabi-gcc.cmake
linker/: STM32F407ZGTX_FLASH.ld
peripherals/beep/: beep.c  beep.h  beep.md
peripherals/delay/: delay.c  delay.h  delay.md
peripherals/exti/: exti.c  exti.h  exti.md
peripherals/iwdg/: iwdg.c  iwdg.h  iwdg.md
peripherals/key/: key.c  key.h  key.md
peripherals/led/: led.c  led.h  led.md
peripherals/pwm/: pwm.c  pwm.h  pwm.md
peripherals/rng/: rng.c  rng.h  rng.md
peripherals/sys/: sys.c  sys.h  sys.md
peripherals/timer/: timer.c  timer.h  timer.md
peripherals/uart/: uart.c  uart.h  uart.md
